--- a/about.css
+++ b/about.css
@@ -24,7 +24,7 @@ h1 {
   height: 250px;
   }
 
-  .profile{
+  .contents{
     display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,8 +50,3 @@ h1 {
   margin-left: 50px;
 }
 
-.policies{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
