--- a/about.css
+++ b/about.css
@@ -1,15 +1,14 @@
-html body{
-  margin: 0px;
-  madding:0px;
-  
-  
+html,body   {
+  background-color: #000000;
+  color: #ffffff;
+  transition-duration: 500ms;
 }
 
-.title {
-  text-align: center;
-  height: 40%;
-  position: relative;
+html,body,h1,h2,h3,h4,p {
+  margin: 0px;
+  padding:0px;
 }
+
 
 h1 {
   position: absolute;
@@ -19,30 +18,64 @@ h1 {
   transform : translate(-50%,-50%);
 }
 
+h2 {
+  margin-bottom: 50px;
+}
+
+
+td {
+  padding: 5px;
+}
+
   img{
   width: 320px;
   height: 250px;
   }
 
+.header {
+  text-align: center;
+  height: 100%;
+  position: relative;
+  background-image: url("img/金魚.png");
+  margin-bottom: 50px;
+  
+}
+
+.outline {
+  width: 200px;
+  text-align: center;
+  float: right;
+  margin: 50px 30px;
+}
+
+.profile{
+  display: inline-block;
+  text-align: left;
+  
+}
+
+
   .contents{
     display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 100px;
+  
   }
 
 .content{
   display:block;
-  width: 720px;
+  width: 820px;
   margin-bottom: 50px;
+  
 }
 
 .content img{
   float: left;
   margin-right: 50px; 
-}
-
-.content h3 {
-  text-align: center;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .rigt img{
@@ -50,3 +83,43 @@ h1 {
   margin-left: 50px;
 }
 
+
+
+.content h3 {
+  position: absolute;
+  padding: 100px;
+  float: right;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  visibility: visible;
+  opacity: 1;
+  transition-duration: 0.5s;
+  transition-property: visibility, opacity;
+}
+
+.content:hover h3 {
+  visibility: hidden;
+  opacity: 0;
+  transition-duration: 0.5s;
+}
+
+.content p {
+  position: absolute;
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 75px;
+  margin-left: 50px;
+  visibility: hidden;
+  opacity: 0;
+  
+  transition-property: visibility, opacity;
+
+}
+
+.content:hover p {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.5s;
+  transition-duration: 0.5s;
+}
