--- a/about.css
+++ b/about.css
@@ -17,7 +17,6 @@
     background-image: url("img/金魚.png");
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 50px;
     
   }
   
@@ -89,8 +88,45 @@
   }
   
   
+
+
+
+
+  .box {
+    width: 100%;
+    height: 30%;
+    background-color: #ffffff;
+  }
   
-    .contents{
+  .box_contents  {
+    width: 70%;
+    height: 100%;
+    background-color: blue;
+    margin: 0 auto;
+    bottom: 0;
+    display: flex;
+  }
+  
+  .box_contents img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+  }
+  
+  .box_text {
+    width: 80%;
+    height: 70%;
+    background-color: red;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  .contents{
     display: flex;
     flex-direction: column;
     align-items: center;
